--- a/drchrono/templates/base.html
+++ b/drchrono/templates/base.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-    {% block extra_header %}{% endblock %}
-
+    <title>Drchrono Check-in Kiosk</title>
     {#Bootstrap -- quick and easy #}
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -16,9 +14,21 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <img alt="Brand" src="https://app.drchrono.com/site_media/cb-13bac534/public/images_2016/logo-dark.svg">
+            </div>
+            {% block body %}
+            {% endblock body %}
+        </div><!-- /.container-fluid -->
+    </nav>
 <div class="container">
-{% block body %}
-{% endblock %}
+{% block content %}
+{% endblock content%}
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </body>
+{% block scripts %}
+{% endblock scripts %}
 </html>
